Fix for bug #13372 (decimal union)